Work/texk/web2c/web2c/y.output
State 213 conflicts: 1 shift/reduce


Grammar

    0 $accept: PROGRAM $end

    1 @1: /* empty */

    2 @2: /* empty */

    3 PROGRAM: DEFS PROGRAM_HEAD @1 LABEL_DEC_PART CONST_DEC_PART TYPE_DEC_PART VAR_DEC_PART @2 P_F_DEC_PART BODY

    4 DEFS: /* empty */
    5     | DEFS DEF

    6 DEF: define_tok field_tok undef_id_tok ';'
    7    | define_tok function_tok undef_id_tok ';'
    8    | define_tok const_tok undef_id_tok ';'
    9    | define_tok function_tok undef_id_tok '(' ')' ';'
   10    | define_tok procedure_tok undef_id_tok ';'
   11    | define_tok procedure_tok undef_id_tok '(' ')' ';'
   12    | define_tok type_tok undef_id_tok ';'
   13    | define_tok type_tok undef_id_tok '=' SUBRANGE_TYPE ';'
   14    | define_tok var_tok undef_id_tok ';'

   15 PROGRAM_HEAD: program_tok undef_id_tok PROGRAM_FILE_PART ';'

   16 PROGRAM_FILE_PART: '(' PROGRAM_FILE_LIST ')'
   17                  | /* empty */

   18 PROGRAM_FILE_LIST: PROGRAM_FILE
   19                  | PROGRAM_FILE_LIST ',' PROGRAM_FILE

   20 PROGRAM_FILE: const_id_tok
   21             | undef_id_tok

   22 @3: /* empty */

   23 @4: /* empty */

   24 @5: /* empty */

   25 BLOCK: @3 LABEL_DEC_PART CONST_DEC_PART TYPE_DEC_PART @4 VAR_DEC_PART @5 STAT_PART

   26 LABEL_DEC_PART: /* empty */

   27 @6: /* empty */

   28 LABEL_DEC_PART: label_tok @6 LABEL_LIST ';'

   29 LABEL_LIST: LABEL
   30           | LABEL_LIST ',' LABEL

   31 LABEL: i_num_tok

   32 CONST_DEC_PART: /* empty */
   33               | const_tok CONST_DEC_LIST

   34 CONST_DEC_LIST: CONST_DEC
   35               | CONST_DEC_LIST CONST_DEC

   36 @7: /* empty */

   37 @8: /* empty */

   38 @9: /* empty */

   39 @10: /* empty */

   40 CONST_DEC: @7 undef_id_tok @8 '=' @9 CONSTANT_EXPRESS @10 ';'

   41 CONSTANT: i_num_tok
   42         | r_num_tok
   43         | STRING
   44         | CONSTANT_ID

   45 CONSTANT_EXPRESS: UNARY_OP CONSTANT_EXPRESS

   46 @11: /* empty */

   47 CONSTANT_EXPRESS: CONSTANT_EXPRESS '+' @11 CONSTANT_EXPRESS

   48 @12: /* empty */

   49 CONSTANT_EXPRESS: CONSTANT_EXPRESS '-' @12 CONSTANT_EXPRESS

   50 @13: /* empty */

   51 CONSTANT_EXPRESS: CONSTANT_EXPRESS '*' @13 CONSTANT_EXPRESS

   52 @14: /* empty */

   53 CONSTANT_EXPRESS: CONSTANT_EXPRESS div_tok @14 CONSTANT_EXPRESS

   54 @15: /* empty */

   55 CONSTANT_EXPRESS: CONSTANT_EXPRESS '=' @15 CONSTANT_EXPRESS

   56 @16: /* empty */

   57 CONSTANT_EXPRESS: CONSTANT_EXPRESS not_eq_tok @16 CONSTANT_EXPRESS

   58 @17: /* empty */

   59 CONSTANT_EXPRESS: CONSTANT_EXPRESS mod_tok @17 CONSTANT_EXPRESS

   60 @18: /* empty */

   61 CONSTANT_EXPRESS: CONSTANT_EXPRESS '<' @18 CONSTANT_EXPRESS

   62 @19: /* empty */

   63 CONSTANT_EXPRESS: CONSTANT_EXPRESS '>' @19 CONSTANT_EXPRESS

   64 @20: /* empty */

   65 CONSTANT_EXPRESS: CONSTANT_EXPRESS less_eq_tok @20 CONSTANT_EXPRESS

   66 @21: /* empty */

   67 CONSTANT_EXPRESS: CONSTANT_EXPRESS great_eq_tok @21 CONSTANT_EXPRESS

   68 @22: /* empty */

   69 CONSTANT_EXPRESS: CONSTANT_EXPRESS and_tok @22 CONSTANT_EXPRESS

   70 @23: /* empty */

   71 CONSTANT_EXPRESS: CONSTANT_EXPRESS or_tok @23 CONSTANT_EXPRESS

   72 @24: /* empty */

   73 CONSTANT_EXPRESS: CONSTANT_EXPRESS '/' @24 CONSTANT_EXPRESS
   74                 | CONST_FACTOR

   75 @25: /* empty */

   76 CONST_FACTOR: '(' @25 CONSTANT_EXPRESS ')'
   77             | CONSTANT

   78 STRING: string_literal_tok
   79       | single_char_tok

   80 CONSTANT_ID: const_id_tok

   81 TYPE_DEC_PART: /* empty */
   82              | type_tok TYPE_DEF_LIST

   83 TYPE_DEF_LIST: TYPE_DEF
   84              | TYPE_DEF_LIST TYPE_DEF

   85 @26: /* empty */

   86 @27: /* empty */

   87 @28: /* empty */

   88 TYPE_DEF: @26 undef_id_tok @27 '=' @28 TYPE ';'

   89 TYPE: SIMPLE_TYPE
   90     | STRUCTURED_TYPE

   91 SIMPLE_TYPE: SUBRANGE_TYPE
   92            | TYPE_ID

   93 SUBRANGE_TYPE: SUBRANGE_CONSTANT two_dots_tok SUBRANGE_CONSTANT

   94 POSSIBLE_PLUS: /* empty */
   95              | unary_plus_tok

   96 SUBRANGE_CONSTANT: POSSIBLE_PLUS i_num_tok
   97                  | const_id_tok
   98                  | var_id_tok
   99                  | undef_id_tok

  100 TYPE_ID: type_id_tok

  101 STRUCTURED_TYPE: ARRAY_TYPE
  102                | RECORD_TYPE
  103                | FILE_TYPE
  104                | POINTER_TYPE

  105 POINTER_TYPE: '^' type_id_tok

  106 ARRAY_TYPE: array_tok '[' INDEX_TYPE ']' of_tok COMPONENT_TYPE
  107           | array_tok '[' INDEX_TYPE ',' INDEX_TYPE ']' of_tok COMPONENT_TYPE

  108 INDEX_TYPE: SUBRANGE_TYPE
  109           | type_id_tok

  110 COMPONENT_TYPE: TYPE

  111 @29: /* empty */

  112 RECORD_TYPE: record_tok @29 FIELD_LIST end_tok

  113 FIELD_LIST: RECORD_SECTION
  114           | FIELD_LIST ';' RECORD_SECTION

  115 @30: /* empty */

  116 @31: /* empty */

  117 RECORD_SECTION: @30 FIELD_ID_LIST ':' @31 TYPE
  118               | /* empty */

  119 FIELD_ID_LIST: FIELD_ID
  120              | FIELD_ID_LIST ',' FIELD_ID

  121 FIELD_ID: undef_id_tok
  122         | field_id_tok

  123 @32: /* empty */

  124 FILE_TYPE: file_tok of_tok @32 TYPE

  125 VAR_DEC_PART: /* empty */
  126             | var_tok VAR_DEC_LIST

  127 VAR_DEC_LIST: VAR_DEC
  128             | VAR_DEC_LIST VAR_DEC

  129 @33: /* empty */

  130 @34: /* empty */

  131 VAR_DEC: @33 VAR_ID_DEC_LIST ':' @34 TYPE ';'

  132 VAR_ID_DEC_LIST: VAR_ID
  133                | VAR_ID_DEC_LIST ',' VAR_ID

  134 VAR_ID: undef_id_tok
  135       | var_id_tok
  136       | field_id_tok

  137 BODY: /* empty */

  138 @35: /* empty */

  139 BODY: begin_tok @35 STAT_LIST end_tok '.'

  140 P_F_DEC_PART: P_F_DEC
  141             | P_F_DEC_PART P_F_DEC

  142 P_F_DEC: PROCEDURE_DEC ';'
  143        | FUNCTION_DEC ';'

  144 PROCEDURE_DEC: PROCEDURE_HEAD BLOCK

  145 @36: /* empty */

  146 PROCEDURE_HEAD: procedure_tok undef_id_tok @36 PARAM ';'

  147 @37: /* empty */

  148 PROCEDURE_HEAD: procedure_tok DECLARED_PROC @37 PARAM ';'

  149 PARAM: /* empty */

  150 @38: /* empty */

  151 PARAM: '(' @38 FORM_PAR_SEC_L ')'

  152 FORM_PAR_SEC_L: FORM_PAR_SEC
  153               | FORM_PAR_SEC_L ';' FORM_PAR_SEC

  154 @39: /* empty */

  155 FORM_PAR_SEC1: @39 VAR_ID_DEC_LIST ':' type_id_tok

  156 @40: /* empty */

  157 FORM_PAR_SEC: @40 FORM_PAR_SEC1

  158 @41: /* empty */

  159 FORM_PAR_SEC: var_tok @41 FORM_PAR_SEC1

  160 DECLARED_PROC: proc_id_tok
  161              | proc_param_tok

  162 FUNCTION_DEC: FUNCTION_HEAD BLOCK

  163 @42: /* empty */

  164 @43: /* empty */

  165 @44: /* empty */

  166 FUNCTION_HEAD: function_tok undef_id_tok @42 PARAM ':' @43 RESULT_TYPE @44 ';'

  167 @45: /* empty */

  168 @46: /* empty */

  169 @47: /* empty */

  170 FUNCTION_HEAD: function_tok DECLARED_FUN @45 PARAM ':' @46 RESULT_TYPE @47 ';'

  171 DECLARED_FUN: fun_id_tok
  172             | fun_param_tok

  173 RESULT_TYPE: TYPE

  174 STAT_PART: begin_tok STAT_LIST end_tok

  175 @48: /* empty */

  176 COMPOUND_STAT: begin_tok @48 STAT_LIST end_tok

  177 STAT_LIST: STATEMENT
  178          | STAT_LIST ';' STATEMENT

  179 STATEMENT: UNLAB_STAT
  180          | S_LABEL ':' UNLAB_STAT

  181 S_LABEL: i_num_tok

  182 UNLAB_STAT: SIMPLE_STAT
  183           | STRUCT_STAT

  184 SIMPLE_STAT: ASSIGN_STAT
  185            | PROC_STAT
  186            | GO_TO_STAT
  187            | EMPTY_STAT
  188            | break_tok

  189 @49: /* empty */

  190 ASSIGN_STAT: VARIABLE assign_tok @49 EXPRESS

  191 @50: /* empty */

  192 ASSIGN_STAT: FUNC_ID_AS assign_tok @50 EXPRESS

  193 @51: /* empty */

  194 VARIABLE: var_id_tok @51 VAR_DESIG_LIST
  195         | var_id_tok

  196 FUNC_ID_AS: fun_id_tok
  197           | fun_param_tok

  198 VAR_DESIG_LIST: VAR_DESIG
  199               | VAR_DESIG_LIST VAR_DESIG

  200 @52: /* empty */

  201 VAR_DESIG: '[' @52 EXPRESS VAR_DESIG1
  202          | '.' field_id_tok
  203          | '.' hhb0_tok
  204          | '.' hhb1_tok

  205 VAR_DESIG1: ']'

  206 @53: /* empty */

  207 VAR_DESIG1: ',' @53 EXPRESS ']'

  208 EXPRESS: UNARY_OP EXPRESS

  209 @54: /* empty */

  210 EXPRESS: EXPRESS '+' @54 EXPRESS

  211 @55: /* empty */

  212 EXPRESS: EXPRESS '-' @55 EXPRESS

  213 @56: /* empty */

  214 EXPRESS: EXPRESS '*' @56 EXPRESS

  215 @57: /* empty */

  216 EXPRESS: EXPRESS div_tok @57 EXPRESS

  217 @58: /* empty */

  218 EXPRESS: EXPRESS '=' @58 EXPRESS

  219 @59: /* empty */

  220 EXPRESS: EXPRESS not_eq_tok @59 EXPRESS

  221 @60: /* empty */

  222 EXPRESS: EXPRESS mod_tok @60 EXPRESS

  223 @61: /* empty */

  224 EXPRESS: EXPRESS '<' @61 EXPRESS

  225 @62: /* empty */

  226 EXPRESS: EXPRESS '>' @62 EXPRESS

  227 @63: /* empty */

  228 EXPRESS: EXPRESS less_eq_tok @63 EXPRESS

  229 @64: /* empty */

  230 EXPRESS: EXPRESS great_eq_tok @64 EXPRESS

  231 @65: /* empty */

  232 EXPRESS: EXPRESS and_tok @65 EXPRESS

  233 @66: /* empty */

  234 EXPRESS: EXPRESS or_tok @66 EXPRESS

  235 @67: /* empty */

  236 EXPRESS: EXPRESS '/' @67 EXPRESS
  237        | FACTOR

  238 UNARY_OP: unary_plus_tok
  239         | unary_minus_tok
  240         | not_tok

  241 @68: /* empty */

  242 FACTOR: '(' @68 EXPRESS ')'
  243       | VARIABLE
  244       | CONSTANT
  245       | fun_id_tok

  246 @69: /* empty */

  247 FACTOR: fun_param_tok @69 PARAM_LIST

  248 @70: /* empty */

  249 PARAM_LIST: '(' @70 ACTUAL_PARAM_L ')'

  250 ACTUAL_PARAM_L: ACTUAL_PARAM

  251 @71: /* empty */

  252 ACTUAL_PARAM_L: ACTUAL_PARAM_L ',' @71 ACTUAL_PARAM

  253 ACTUAL_PARAM: EXPRESS WIDTH_FIELD
  254             | type_id_tok

  255 WIDTH_FIELD: ':' i_num_tok
  256            | /* empty */

  257 PROC_STAT: proc_id_tok
  258          | undef_id_tok

  259 @72: /* empty */

  260 PROC_STAT: proc_param_tok @72 PARAM_LIST

  261 GO_TO_STAT: goto_tok i_num_tok

  262 EMPTY_STAT: /* empty */

  263 STRUCT_STAT: COMPOUND_STAT
  264            | CONDIT_STAT
  265            | REPETIT_STAT

  266 CONDIT_STAT: IF_STATEMENT
  267            | CASE_STATEMENT

  268 IF_STATEMENT: BEGIN_IF_STAT
  269             | BEGIN_IF_STAT ELSE_STAT

  270 @73: /* empty */

  271 @74: /* empty */

  272 BEGIN_IF_STAT: if_tok @73 EXPRESS @74 then_tok STATEMENT

  273 @75: /* empty */

  274 ELSE_STAT: else_tok @75 STATEMENT

  275 @76: /* empty */

  276 @77: /* empty */

  277 CASE_STATEMENT: case_tok @76 EXPRESS of_tok @77 CASE_EL_LIST END_CASE

  278 CASE_EL_LIST: CASE_ELEMENT
  279             | CASE_EL_LIST ';' CASE_ELEMENT

  280 CASE_ELEMENT: CASE_LAB_LIST ':' UNLAB_STAT

  281 CASE_LAB_LIST: CASE_LAB
  282              | CASE_LAB_LIST ',' CASE_LAB

  283 CASE_LAB: i_num_tok
  284         | others_tok

  285 END_CASE: end_tok
  286         | ';' end_tok

  287 REPETIT_STAT: WHILE_STATEMENT
  288             | REP_STATEMENT
  289             | FOR_STATEMENT

  290 @78: /* empty */

  291 @79: /* empty */

  292 WHILE_STATEMENT: while_tok @78 EXPRESS @79 do_tok STATEMENT

  293 @80: /* empty */

  294 @81: /* empty */

  295 REP_STATEMENT: repeat_tok @80 STAT_LIST until_tok @81 EXPRESS

  296 @82: /* empty */

  297 @83: /* empty */

  298 @84: /* empty */

  299 FOR_STATEMENT: for_tok @82 CONTROL_VAR assign_tok @83 FOR_LIST do_tok @84 STATEMENT

  300 CONTROL_VAR: var_id_tok

  301 @85: /* empty */

  302 @86: /* empty */

  303 FOR_LIST: EXPRESS @85 to_tok @86 EXPRESS

  304 @87: /* empty */

  305 @88: /* empty */

  306 FOR_LIST: EXPRESS @87 downto_tok @88 EXPRESS


Terminals, with rules where they appear

$end (0) 0
'(' (40) 9 11 16 76 151 242 249
')' (41) 9 11 16 76 151 242 249
'*' (42) 51 214
'+' (43) 47 210
',' (44) 19 30 107 120 133 207 252 282
'-' (45) 49 212
'.' (46) 139 202 203 204
'/' (47) 73 236
':' (58) 117 131 155 166 170 180 255 280
';' (59) 6 7 8 9 10 11 12 13 14 15 28 40 88 114 131 142 143 146 148
    153 166 170 178 279 286
'<' (60) 61 224
'=' (61) 13 40 55 88 218
'>' (62) 63 226
'[' (91) 106 107 201
']' (93) 106 107 205 207
'^' (94) 105
error (256)
array_tok (258) 106 107
begin_tok (259) 139 174 176
case_tok (260) 277
const_tok (261) 8 33
do_tok (262) 292 299
downto_tok (263) 306
else_tok (264) 274
end_tok (265) 112 139 174 176 285 286
file_tok (266) 124
for_tok (267) 299
function_tok (268) 7 9 166 170
goto_tok (269) 261
if_tok (270) 272
label_tok (271) 28
of_tok (272) 106 107 124 277
procedure_tok (273) 10 11 146 148
program_tok (274) 15
record_tok (275) 112
repeat_tok (276) 295
then_tok (277) 272
to_tok (278) 303
type_tok (279) 12 13 82
until_tok (280) 295
var_tok (281) 14 126 159
while_tok (282) 292
others_tok (283) 284
r_num_tok (284) 42
i_num_tok (285) 31 41 96 181 255 261 283
string_literal_tok (286) 78
single_char_tok (287) 79
assign_tok (288) 190 192 299
two_dots_tok (289) 93
undef_id_tok (290) 6 7 8 9 10 11 12 13 14 15 21 40 88 99 121 134 146
    166 258
var_id_tok (291) 98 135 194 195 300
proc_id_tok (292) 160 257
proc_param_tok (293) 161 260
fun_id_tok (294) 171 196 245
fun_param_tok (295) 172 197 247
const_id_tok (296) 20 80 97
type_id_tok (297) 100 105 109 155 254
hhb0_tok (298) 203
hhb1_tok (299) 204
field_id_tok (300) 122 136 202
define_tok (301) 6 7 8 9 10 11 12 13 14
field_tok (302) 6
break_tok (303) 188
great_eq_tok (304) 67 230
less_eq_tok (305) 65 228
not_eq_tok (306) 57 220
or_tok (307) 71 234
unary_minus_tok (308) 239
unary_plus_tok (309) 95 238
and_tok (310) 69 232
mod_tok (311) 59 222
div_tok (312) 53 216
not_tok (313) 240


Nonterminals, with rules where they appear

$accept (75)
    on left: 0
PROGRAM (76)
    on left: 3, on right: 0
@1 (77)
    on left: 1, on right: 3
@2 (78)
    on left: 2, on right: 3
DEFS (79)
    on left: 4 5, on right: 3 5
DEF (80)
    on left: 6 7 8 9 10 11 12 13 14, on right: 5
PROGRAM_HEAD (81)
    on left: 15, on right: 3
PROGRAM_FILE_PART (82)
    on left: 16 17, on right: 15
PROGRAM_FILE_LIST (83)
    on left: 18 19, on right: 16 19
PROGRAM_FILE (84)
    on left: 20 21, on right: 18 19
BLOCK (85)
    on left: 25, on right: 144 162
@3 (86)
    on left: 22, on right: 25
@4 (87)
    on left: 23, on right: 25
@5 (88)
    on left: 24, on right: 25
LABEL_DEC_PART (89)
    on left: 26 28, on right: 3 25
@6 (90)
    on left: 27, on right: 28
LABEL_LIST (91)
    on left: 29 30, on right: 28 30
LABEL (92)
    on left: 31, on right: 29 30
CONST_DEC_PART (93)
    on left: 32 33, on right: 3 25
CONST_DEC_LIST (94)
    on left: 34 35, on right: 33 35
CONST_DEC (95)
    on left: 40, on right: 34 35
@7 (96)
    on left: 36, on right: 40
@8 (97)
    on left: 37, on right: 40
@9 (98)
    on left: 38, on right: 40
@10 (99)
    on left: 39, on right: 40
CONSTANT (100)
    on left: 41 42 43 44, on right: 77 244
CONSTANT_EXPRESS (101)
    on left: 45 47 49 51 53 55 57 59 61 63 65 67 69 71 73 74,
    on right: 40 45 47 49 51 53 55 57 59 61 63 65 67 69 71 73 76
@11 (102)
    on left: 46, on right: 47
@12 (103)
    on left: 48, on right: 49
@13 (104)
    on left: 50, on right: 51
@14 (105)
    on left: 52, on right: 53
@15 (106)
    on left: 54, on right: 55
@16 (107)
    on left: 56, on right: 57
@17 (108)
    on left: 58, on right: 59
@18 (109)
    on left: 60, on right: 61
@19 (110)
    on left: 62, on right: 63
@20 (111)
    on left: 64, on right: 65
@21 (112)
    on left: 66, on right: 67
@22 (113)
    on left: 68, on right: 69
@23 (114)
    on left: 70, on right: 71
@24 (115)
    on left: 72, on right: 73
CONST_FACTOR (116)
    on left: 76 77, on right: 74
@25 (117)
    on left: 75, on right: 76
STRING (118)
    on left: 78 79, on right: 43
CONSTANT_ID (119)
    on left: 80, on right: 44
TYPE_DEC_PART (120)
    on left: 81 82, on right: 3 25
TYPE_DEF_LIST (121)
    on left: 83 84, on right: 82 84
TYPE_DEF (122)
    on left: 88, on right: 83 84
@26 (123)
    on left: 85, on right: 88
@27 (124)
    on left: 86, on right: 88
@28 (125)
    on left: 87, on right: 88
TYPE (126)
    on left: 89 90, on right: 88 110 117 124 131 173
SIMPLE_TYPE (127)
    on left: 91 92, on right: 89
SUBRANGE_TYPE (128)
    on left: 93, on right: 13 91 108
POSSIBLE_PLUS (129)
    on left: 94 95, on right: 96
SUBRANGE_CONSTANT (130)
    on left: 96 97 98 99, on right: 93
TYPE_ID (131)
    on left: 100, on right: 92
STRUCTURED_TYPE (132)
    on left: 101 102 103 104, on right: 90
POINTER_TYPE (133)
    on left: 105, on right: 104
ARRAY_TYPE (134)
    on left: 106 107, on right: 101
INDEX_TYPE (135)
    on left: 108 109, on right: 106 107
COMPONENT_TYPE (136)
    on left: 110, on right: 106 107
RECORD_TYPE (137)
    on left: 112, on right: 102
@29 (138)
    on left: 111, on right: 112
FIELD_LIST (139)
    on left: 113 114, on right: 112 114
RECORD_SECTION (140)
    on left: 117 118, on right: 113 114
@30 (141)
    on left: 115, on right: 117
@31 (142)
    on left: 116, on right: 117
FIELD_ID_LIST (143)
    on left: 119 120, on right: 117 120
FIELD_ID (144)
    on left: 121 122, on right: 119 120
FILE_TYPE (145)
    on left: 124, on right: 103
@32 (146)
    on left: 123, on right: 124
VAR_DEC_PART (147)
    on left: 125 126, on right: 3 25
VAR_DEC_LIST (148)
    on left: 127 128, on right: 126 128
VAR_DEC (149)
    on left: 131, on right: 127 128
@33 (150)
    on left: 129, on right: 131
@34 (151)
    on left: 130, on right: 131
VAR_ID_DEC_LIST (152)
    on left: 132 133, on right: 131 133 155
VAR_ID (153)
    on left: 134 135 136, on right: 132 133
BODY (154)
    on left: 137 139, on right: 3
@35 (155)
    on left: 138, on right: 139
P_F_DEC_PART (156)
    on left: 140 141, on right: 3 141
P_F_DEC (157)
    on left: 142 143, on right: 140 141
PROCEDURE_DEC (158)
    on left: 144, on right: 142
PROCEDURE_HEAD (159)
    on left: 146 148, on right: 144
@36 (160)
    on left: 145, on right: 146
@37 (161)
    on left: 147, on right: 148
PARAM (162)
    on left: 149 151, on right: 146 148 166 170
@38 (163)
    on left: 150, on right: 151
FORM_PAR_SEC_L (164)
    on left: 152 153, on right: 151 153
FORM_PAR_SEC1 (165)
    on left: 155, on right: 157 159
@39 (166)
    on left: 154, on right: 155
FORM_PAR_SEC (167)
    on left: 157 159, on right: 152 153
@40 (168)
    on left: 156, on right: 157
@41 (169)
    on left: 158, on right: 159
DECLARED_PROC (170)
    on left: 160 161, on right: 148
FUNCTION_DEC (171)
    on left: 162, on right: 143
FUNCTION_HEAD (172)
    on left: 166 170, on right: 162
@42 (173)
    on left: 163, on right: 166
@43 (174)
    on left: 164, on right: 166
@44 (175)
    on left: 165, on right: 166
@45 (176)
    on left: 167, on right: 170
@46 (177)
    on left: 168, on right: 170
@47 (178)
    on left: 169, on right: 170
DECLARED_FUN (179)
    on left: 171 172, on right: 170
RESULT_TYPE (180)
    on left: 173, on right: 166 170
STAT_PART (181)
    on left: 174, on right: 25
COMPOUND_STAT (182)
    on left: 176, on right: 263
@48 (183)
    on left: 175, on right: 176
STAT_LIST (184)
    on left: 177 178, on right: 139 174 176 178 295
STATEMENT (185)
    on left: 179 180, on right: 177 178 272 274 292 299
S_LABEL (186)
    on left: 181, on right: 180
UNLAB_STAT (187)
    on left: 182 183, on right: 179 180 280
SIMPLE_STAT (188)
    on left: 184 185 186 187 188, on right: 182
ASSIGN_STAT (189)
    on left: 190 192, on right: 184
@49 (190)
    on left: 189, on right: 190
@50 (191)
    on left: 191, on right: 192
VARIABLE (192)
    on left: 194 195, on right: 190 243
@51 (193)
    on left: 193, on right: 194
FUNC_ID_AS (194)
    on left: 196 197, on right: 192
VAR_DESIG_LIST (195)
    on left: 198 199, on right: 194 199
VAR_DESIG (196)
    on left: 201 202 203 204, on right: 198 199
@52 (197)
    on left: 200, on right: 201
VAR_DESIG1 (198)
    on left: 205 207, on right: 201
@53 (199)
    on left: 206, on right: 207
EXPRESS (200)
    on left: 208 210 212 214 216 218 220 222 224 226 228 230 232 234
    236 237, on right: 190 192 201 207 208 210 212 214 216 218 220
    222 224 226 228 230 232 234 236 242 253 272 277 292 295 303 306
@54 (201)
    on left: 209, on right: 210
@55 (202)
    on left: 211, on right: 212
@56 (203)
    on left: 213, on right: 214
@57 (204)
    on left: 215, on right: 216
@58 (205)
    on left: 217, on right: 218
@59 (206)
    on left: 219, on right: 220
@60 (207)
    on left: 221, on right: 222
@61 (208)
    on left: 223, on right: 224
@62 (209)
    on left: 225, on right: 226
@63 (210)
    on left: 227, on right: 228
@64 (211)
    on left: 229, on right: 230
@65 (212)
    on left: 231, on right: 232
@66 (213)
    on left: 233, on right: 234
@67 (214)
    on left: 235, on right: 236
UNARY_OP (215)
    on left: 238 239 240, on right: 45 208
FACTOR (216)
    on left: 242 243 244 245 247, on right: 237
@68 (217)
    on left: 241, on right: 242
@69 (218)
    on left: 246, on right: 247
PARAM_LIST (219)
    on left: 249, on right: 247 260
@70 (220)
    on left: 248, on right: 249
ACTUAL_PARAM_L (221)
    on left: 250 252, on right: 249 252
@71 (222)
    on left: 251, on right: 252
ACTUAL_PARAM (223)
    on left: 253 254, on right: 250 252
WIDTH_FIELD (224)
    on left: 255 256, on right: 253
PROC_STAT (225)
    on left: 257 258 260, on right: 185
@72 (226)
    on left: 259, on right: 260
GO_TO_STAT (227)
    on left: 261, on right: 186
EMPTY_STAT (228)
    on left: 262, on right: 187
STRUCT_STAT (229)
    on left: 263 264 265, on right: 183
CONDIT_STAT (230)
    on left: 266 267, on right: 264
IF_STATEMENT (231)
    on left: 268 269, on right: 266
BEGIN_IF_STAT (232)
    on left: 272, on right: 268 269
@73 (233)
    on left: 270, on right: 272
@74 (234)
    on left: 271, on right: 272
ELSE_STAT (235)
    on left: 274, on right: 269
@75 (236)
    on left: 273, on right: 274
CASE_STATEMENT (237)
    on left: 277, on right: 267
@76 (238)
    on left: 275, on right: 277
@77 (239)
    on left: 276, on right: 277
CASE_EL_LIST (240)
    on left: 278 279, on right: 277 279
CASE_ELEMENT (241)
    on left: 280, on right: 278 279
CASE_LAB_LIST (242)
    on left: 281 282, on right: 280 282
CASE_LAB (243)
    on left: 283 284, on right: 281 282
END_CASE (244)
    on left: 285 286, on right: 277
REPETIT_STAT (245)
    on left: 287 288 289, on right: 265
WHILE_STATEMENT (246)
    on left: 292, on right: 287
@78 (247)
    on left: 290, on right: 292
@79 (248)
    on left: 291, on right: 292
REP_STATEMENT (249)
    on left: 295, on right: 288
@80 (250)
    on left: 293, on right: 295
@81 (251)
    on left: 294, on right: 295
FOR_STATEMENT (252)
    on left: 299, on right: 289
@82 (253)
    on left: 296, on right: 299
@83 (254)
    on left: 297, on right: 299
@84 (255)
    on left: 298, on right: 299
CONTROL_VAR (256)
    on left: 300, on right: 299
FOR_LIST (257)
    on left: 303 306, on right: 299
@85 (258)
    on left: 301, on right: 303
@86 (259)
    on left: 302, on right: 303
@87 (260)
    on left: 304, on right: 306
@88 (261)
    on left: 305, on right: 306


state 0

    0 $accept: . PROGRAM $end

    $default  reduce using rule 4 (DEFS)

    PROGRAM  go to state 1
    DEFS     go to state 2


state 1

    0 $accept: PROGRAM . $end

    $end  shift, and go to state 3


state 2

    3 PROGRAM: DEFS . PROGRAM_HEAD @1 LABEL_DEC_PART CONST_DEC_PART TYPE_DEC_PART VAR_DEC_PART @2 P_F_DEC_PART BODY
    5 DEFS: DEFS . DEF

    program_tok  shift, and go to state 4
    define_tok   shift, and go to state 5

    DEF           go to state 6
    PROGRAM_HEAD  go to state 7


state 3

    0 $accept: PROGRAM $end .

    $default  accept


state 4

   15 PROGRAM_HEAD: program_tok . undef_id_tok PROGRAM_FILE_PART ';'

    undef_id_tok  shift, and go to state 8


state 5

    6 DEF: define_tok . field_tok undef_id_tok ';'
    7    | define_tok . function_tok undef_id_tok ';'
    8    | define_tok . const_tok undef_id_tok ';'
    9    | define_tok . function_tok undef_id_tok '(' ')' ';'
   10    | define_tok . procedure_tok undef_id_tok ';'
   11    | define_tok . procedure_tok undef_id_tok '(' ')' ';'
   12    | define_tok . type_tok undef_id_tok ';'
   13    | define_tok . type_tok undef_id_tok '=' SUBRANGE_TYPE ';'
   14    | define_tok . var_tok undef_id_tok ';'

    const_tok      shift, and go to state 9
    function_tok   shift, and go to state 10
    procedure_tok  shift, and go to state 11
    type_tok       shift, and go to state 12
    var_tok        shift, and go to state 13
    field_tok      shift, and go to state 14


state 6

    5 DEFS: DEFS DEF .

    $default  reduce using rule 5 (DEFS)


state 7

    3 PROGRAM: DEFS PROGRAM_HEAD . @1 LABEL_DEC_PART CONST_DEC_PART TYPE_DEC_PART VAR_DEC_PART @2 P_F_DEC_PART BODY

    $default  reduce using rule 1 (@1)

    @1  go to state 15


state 8

   15 PROGRAM_HEAD: program_tok undef_id_tok . PROGRAM_FILE_PART ';'

    '('  shift, and go to state 16

    $default  reduce using rule 17 (PROGRAM_FILE_PART)

    PROGRAM_FILE_PART  go to state 17


state 9

    8 DEF: define_tok const_tok . undef_id_tok ';'

    undef_id_tok  shift, and go to state 18


state 10

    7 DEF: define_tok function_tok . undef_id_tok ';'
    9    | define_tok function_tok . undef_id_tok '(' ')' ';'

    undef_id_tok  shift, and go to state 19


state 11

   10 DEF: define_tok procedure_tok . undef_id_tok ';'
   11    | define_tok procedure_tok . undef_id_tok '(' ')' ';'

    undef_id_tok  shift, and go to state 20


state 12

   12 DEF: define_tok type_tok . undef_id_tok ';'
   13    | define_tok type_tok . undef_id_tok '=' SUBRANGE_TYPE ';'

    undef_id_tok  shift, and go to state 21


state 13

   14 DEF: define_tok var_tok . undef_id_tok ';'

    undef_id_tok  shift, and go to state 22


state 14

    6 DEF: define_tok field_tok . undef_id_tok ';'

    undef_id_tok  shift, and go to state 23


state 15

    3 PROGRAM: DEFS PROGRAM_HEAD @1 . LABEL_DEC_PART CONST_DEC_PART TYPE_DEC_PART VAR_DEC_PART @2 P_F_DEC_PART BODY

    label_tok  shift, and go to state 24

    $default  reduce using rule 26 (LABEL_DEC_PART)

    LABEL_DEC_PART  go to state 25


state 16

   16 PROGRAM_FILE_PART: '(' . PROGRAM_FILE_LIST ')'

    undef_id_tok  shift, and go to state 26
    const_id_tok  shift, and go to state 27

    PROGRAM_FILE_LIST  go to state 28
    PROGRAM_FILE       go to state 29


state 17

   15 PROGRAM_HEAD: program_tok undef_id_tok PROGRAM_FILE_PART . ';'

    ';'  shift, and go to state 30


state 18

    8 DEF: define_tok const_tok undef_id_tok . ';'

    ';'  shift, and go to state 31


state 19

    7 DEF: define_tok function_tok undef_id_tok . ';'
    9    | define_tok function_tok undef_id_tok . '(' ')' ';'

    ';'  shift, and go to state 32
    '('  shift, and go to state 33


state 20

   10 DEF: define_tok procedure_tok undef_id_tok . ';'
   11    | define_tok procedure_tok undef_id_tok . '(' ')' ';'
